# test

./: .gitignore  AGENT.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
configs/: backtest.yaml  config.yaml  infer.yaml  train.yaml
docs/: README-methodo.md
parquet_samples/: STOCK001.parquet  STOCK002.parquet  STOCK003.parquet  STOCK004.parquet  STOCK005.parquet  STOCK006.parquet  STOCK007.parquet  STOCK008.parquet  STOCK009.parquet
scripts/: backtest_daily.py  eval_fmb.py  predict.py  prepare_crsp.py  train_stockgpt.py
src/stockgpt/: __init__.py
src/stockgpt/dataio/: __init__.py  generate_samples.py  schemas.py
src/stockgpt/eval/: __init__.py  fmb.py  metrics.py  portfolio.py
src/stockgpt/infer/: __init__.py  forecast.py
src/stockgpt/model/: __init__.py  blocks.py  gpt.py  mask.py
src/stockgpt/tokens/: __init__.py  discretizer.py  mapping.py
src/stockgpt/train/: __init__.py  dataset.py  loop.py  optim.py
src/stockgpt/utils/: __init__.py  config.py  logging.py  seed.py
tests/: __init__.py
tests/unit/: test_dataio_and_dataset.py  test_discretizer.py  test_eval_portfolio_fmb_optim_logging.py  test_infer_and_dataio_extra.py  test_mapping.py  test_mapping_and_infer.py  test_metrics_and_utils.py  test_model.py
www/minisite/: index.html
